2008-03-10  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	Removing the apparently unused module "snprintf". There exists
	no corresponding proto and thus it could never be used without
	occuring warnings during compilation. snprintf is part of C99.

	* libopenvas/Makefile: Remove handling of snprintf module.

	* MANIFEST: Updated.

	* libopenvas/snprintf.c: Removed.

2008-03-03  Laban Mwangi <labeneator@gmail.com>

	* libopenvas/plugutils.c, libopenvas/proctitle.c,
	libopenvas/store.c, libopenvas/www_funcs.c:
	Adding FlawFinder ignores to various string operations
	as discussed on the Mailing List.

2008-02-16  Laban Mwangi <labeneator@gmail.com>

	* libopenvas/hlst.c (flush_hlst, make_hlst, sort_hlst, unsort_hlst),
	libopenvas/hlst.h (_hlst): Fixing flawfinder l4 warnings
	related to flawfinder thinking that a ptr in a linkedlist called
	access is = the call access(2)

2008-02-15  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/store.c (safe_copy): Cast return value strlen to
	match format string.  Silences a compiler warning

2008-02-15  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/www_funcs.c (http11_get_head): Removed this unused
	function.  Silences a compiler warning.

2008-02-15  Bernhard Herzog  <bh@intevation.de>

	* libopenvas_hg/hg_dns_axfr.c (hg_dns_axfr_add_host)
	(hg_dns_read_ns_from_answer, hg_dns_axfr_query): Use ns_get16
	instead of _getshort.  _getshort is defined in glibc but not
	declared in any headerfile.  ns_get16 is a newer API but should be
	widely available, too.

2008-02-15  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/hlst.c (copy_hlst): Fix Flawfinder issue.

2008-02-15  Bernhard Herzog  <bh@intevation.de>

	* libopenvas/harglists.c (say_creating): Fix format string to
	match the types that will actually be used
	(say_closing, message): Fix Flawfinder issues
	(do_printf): Fix flawfinder issues.  Fix gcc warnings about
	fprintf args, adapting a format string to better match the purpose