@@ -1,6 +1,0 @@
-#ifndef __NESSUS_LIB_DIFF_H__
-#define __NESSUS_LIB_DIFF_H__
-
-int banner_diff(char*, char*);
-
-#endif
